--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     //3rd party libraries
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'org.sufficientlysecure:html-textview:3.9'
 }
