--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.kateproject.kateapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -27,7 +28,7 @@
             </intent-filter>
         </activity>
         <service
-            android:name="BackgroundService"
+            android:name="BackgroundScheduler"
             android:icon="@drawable/kate"
             android:label="@string/service_name"
             android:permission="android.permission.BIND_JOB_SERVICE" >
