--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,15 @@
                                         tools:ignore="GoogleAppIndexingWarning"
 
     tools:targetApi="m">
-        <activity android:name=".ArticleActivity" />
+        <activity android:name=".ArticleActivity"
+                  android:theme="@style/ArticleTheme"
+                  android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation = "portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
