19ik kommit cikkek betöltve, megjelenítve, kép formázva, szerző is van létrehozva a tabok beállítások menü kb. berendezve, kb csinál dolgokat szűrő kész archívum kérdéses jobban próbálkozik a cikkek betöltésével tud értesítést küldeni küld értesítéseket az új cikkekről, ha van net, talán már nem bugos elmenti a beállításokat elmenti a cikkeket, visszatöltésnél betölti őket url-ként betölti az archívumot töltőképernyő stílusok vannak, de nem lehet váltani

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/kate"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppBaseTheme"
         android:usesCleartextTraffic="true"
                                         tools:ignore="GoogleAppIndexingWarning"
 
@@ -23,7 +23,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:theme="@style/AppBaseTheme.NoActionBar"
             android:screenOrientation = "portrait">
 
             <intent-filter>
